test/sematest/invalid/redefinition_of_variable_in_same_method.java
class A {
  public static void main(String[] args) {
  }

  public void bla(int a, int b){
    if (true){
      int b = 4;
    }
  }
}